# rl_tutorial

./: .gitignore  dqn_pfrl.py  dqn_pfrl_short.py  eval.py  plot.ipynb  pyproject.toml  q_func.py  train_repeat.sh  utils.py
configs/: ac.json  ddqn.json  dqn.json
mylogs/220513075223/: events.out.tfevents.1652395946.ibis1.483950.0.v2
mylogs/220513075313/: events.out.tfevents.1652395993.ibis1.484054.0.v2
mylogs/220513075657/: events.out.tfevents.1652396217.ibis1.484443.0.v2
myrl/: ac_agent.py  ddqn_agent.py  dqn_agent.py  dqn_self.py  policy_net.py  q_func.py  replay_buffer.py  train.py  train_ac.py  train_dqn.py  value_net.py
myrl/results/220501122517/: scores.txt
myrl/results/220501123128/: config.json  scores.txt
myrl/results/220501123152/: scores.txt
myrl/results/220501123401/: scores.txt
myrl/results/220501123457/: config.json  scores.txt
myrl/results/220501123655/: scores.txt
myrl/results/220501123810/: scores.txt
myrl/results/220501125032/: config.json  scores.txt
myrl/results/220501125042/: config.json  scores.txt
myrl/results/220501125223/: scores.txt
myrl/results/220501125828/: scores.txt
myrl/results/220501130131/: scores.txt
myrl/results/220501130204/: scores.txt
myrl/results/220501130254/: config.json  scores.txt
pfrl/: dqn.py  dqn_pfrl_short.py  eval.py
result/: scores.txt
result/100000_finish/: model.pt  optimizer.pt  target_model.pt
result/479163_except/: model.pt  optimizer.pt  target_model.pt
result/best/: model.pt  optimizer.pt  target_model.pt
tests/: test_rl_tutorial.py
(+137 files in other folders)
