[tool.poetry]
name = "rl_tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pfrl = "^0.3.0"
gym = "~0.21.0"
tqdm = "^4.64.0"
tensorboard = "^2.8.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
